// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema store > can add entities to a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can add entities to a parent entity at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can add entities to root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`schema store > can add entities to root at specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can be created with a non-empty schema 1`] = `
[MockFunction validateSchemaIntegrity] {
  "calls": [
    [
      {
        "entities": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "inputs": {
              "label": "test",
            },
            "type": "text",
          },
        },
        "root": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
      },
      {
        "builder": {
          "childrenAllowed": {},
          "entities": [
            {
              "defaultValue": [Function],
              "inputs": [
                {
                  "defaultValue": [Function],
                  "name": "label",
                  "validate": [Function],
                },
              ],
              "isValueAllowed": false,
              "name": "text",
              "shouldBeProcessed": [Function],
              "validate": [Function],
            },
          ],
          "entityId": {
            "generate": [Function],
            "validate": [Function],
          },
          "parentRequired": [],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "inputs": {
                "label": "test",
              },
              "type": "text",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`schema store > can be created with a non-empty schema 2`] = `
{
  "addEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedData": [Function],
  "moveEntityToParent": [Function],
  "moveEntityToRoot": [Function],
  "setData": [Function],
  "setEntityInput": [Function],
  "subscribe": [Function],
}
`;

exports[`schema store > can be created with an empty schema 1`] = `
[MockFunction validateSchemaIntegrity] {
  "calls": [
    [
      {
        "entities": {},
        "root": [],
      },
      {
        "builder": {
          "childrenAllowed": {},
          "entities": [],
          "entityId": {
            "generate": [Function],
            "validate": [Function],
          },
          "parentRequired": [],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {},
          "root": [],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`schema store > can be created with an empty schema 2`] = `
{
  "addEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedData": [Function],
  "moveEntityToParent": [Function],
  "moveEntityToRoot": [Function],
  "setData": [Function],
  "setEntityInput": [Function],
  "subscribe": [Function],
}
`;

exports[`schema store > can be created without a schema 1`] = `
{
  "addEntity": [Function],
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedData": [Function],
  "moveEntityToParent": [Function],
  "moveEntityToRoot": [Function],
  "setData": [Function],
  "setEntityInput": [Function],
  "subscribe": [Function],
}
`;

exports[`schema store > can delete entities and cascade delete their children 1`] = `
{
  "entities": Map {
    "49e91328-02bc-4daa-ab56-619554e85cff" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "49e91328-02bc-4daa-ab56-619554e85cff",
  },
}
`;

exports[`schema store > can delete entities and cascade delete their children 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "EntityDeleted",
          "payload": {
            "entity": {
              "children": Set {},
              "id": "3dc165dd-88d4-4884-ac8a-5d107d023e54",
              "inputs": {},
              "type": "test",
            },
          },
        },
        {
          "name": "EntityDeleted",
          "payload": {
            "entity": {
              "children": Set {},
              "id": "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
              "inputs": {},
              "parentId": "3dc165dd-88d4-4884-ac8a-5d107d023e54",
              "type": "test",
            },
          },
        },
        {
          "name": "EntityDeleted",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "parentId": "c1ab14a4-41db-4531-9a58-4825a9ef6d26",
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity from root to a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can move an entity from root to a parent entity 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "children": Set {
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
              },
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity from root to a parent entity at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can move an entity from root to a parent entity at a specific index 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "children": Set {
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
              },
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity in a parent entity 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {
        "6e0035c3-0d4c-445f-a42b-2d971225447c",
        "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
      },
      "inputs": {},
      "type": "test",
    },
    "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can move an entity in a parent entity 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "type": "test",
            },
          },
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "children": Set {
                "6e0035c3-0d4c-445f-a42b-2d971225447c",
                "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
              },
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity in root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can move an entity in root 2`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`schema store > can move an entity in root 3`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`schema store > can move an entity in root 4`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
    [
      [
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
    [
      [
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity to root 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`schema store > can move an entity to root 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "children": Set {},
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {},
              "type": "test",
            },
          },
        },
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can move an entity to root at a specific index 1`] = `
{
  "entities": Map {
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "children": Set {},
      "inputs": {},
      "type": "test",
    },
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {},
      "type": "test",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can move an entity to root at a specific index 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "children": Set {},
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {},
              "type": "test",
            },
          },
        },
        {
          "name": "RootUpdated",
          "payload": {},
        },
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {},
              "type": "test",
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can retrieve the data 1`] = `
{
  "entities": Map {
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {
        "label": "test",
      },
      "type": "text",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`schema store > can return the schema 1`] = `
{
  "entities": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "inputs": {
        "label": "test",
      },
      "type": "text",
    },
  },
  "root": [
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  ],
}
`;

exports[`schema store > can set the data 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entities": Map {},
        "root": Set {},
      },
      [
        {
          "name": "DataSet",
          "payload": {
            "data": {
              "entities": Map {},
              "root": Set {},
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > can update entity inputs 1`] = `
{
  "entities": Map {
    "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
      "inputs": {
        "label": "New label",
        "required": true,
      },
      "type": "select",
    },
    "51324b32-adc3-4d17-a90e-66b5453935bd" => {
      "inputs": {
        "maxLength": 1,
      },
      "type": "text",
    },
  },
  "root": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`schema store > can update entity inputs 2`] = `
[MockFunction spy] {
  "calls": [
    [
      [
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {
                "label": "New label",
                "required": true,
              },
              "type": "select",
            },
          },
        },
        {
          "name": "EntityInputUpdated",
          "payload": {
            "entity": {
              "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
              "inputs": {
                "label": "New label",
                "required": true,
              },
              "type": "select",
            },
            "inputName": "label",
          },
        },
      ],
    ],
    [
      [
        {
          "name": "EntityUpdated",
          "payload": {
            "entity": {
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {
                "maxLength": 1,
              },
              "type": "text",
            },
          },
        },
        {
          "name": "EntityInputUpdated",
          "payload": {
            "entity": {
              "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
              "inputs": {
                "maxLength": 1,
              },
              "type": "text",
            },
            "inputName": "maxLength",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`schema store > throws moving an entity to a non-allowed parent 1`] = `"Child is not allowed."`;

exports[`schema store > throws when adding an entity to a non-allowed parent 1`] = `"Child is not allowed."`;

exports[`schema store > throws when adding an entity with a non-existent input 1`] = `"Unkown entity input \\"invalid\\"."`;

exports[`schema store > throws when adding an entity with an already existent ID 1`] = `"An entitiy with the ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" already exists."`;

exports[`schema store > throws when adding an entity without a parent when parent is required 1`] = `"A parent is required."`;

exports[`schema store > throws when moving an entity to the root when parent is required 1`] = `"A parent is required."`;

exports[`schema store > throws when trying to add an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`schema store > throws when trying to delete non existent entity 1`] = `"Entity with ID \\"test\\" was not found."`;

exports[`schema store > throws when trying to move a non existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`schema store > throws when trying to move a non existent entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`schema store > throws when trying to move an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`schema store > throws when updating an input of a non-existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`schema store > throws when updating an non-existent input of an entity 1`] = `"Unkown entity input \\"invalid\\"."`;
